Remove home page padding to fix footer
 - Remove home page padding to allow footer to spread from ltr
 - Remove invisible footer box-shadow

--- a/src/src/pages/Home/Home.scss
+++ b/src/src/pages/Home/Home.scss
@@ -2,10 +2,8 @@
 @import "../../index";
 
 .home {
-  padding: 15px;
-
   .container-md {
-    padding: 15px;
+    padding: 15px 25px;
   }
 
   h2, h3 {
@@ -53,6 +51,5 @@
     background: #f3f3f3;
     display: flex;
     justify-content: space-between;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   }
 }
